--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ S3method(dplyr_reconstruct,resample_results)
 S3method(dplyr_reconstruct,tune_results)
 S3method(extract_fit_engine,tune_results)
 S3method(extract_fit_parsnip,tune_results)
+S3method(extract_fit_time,tune_results)
 S3method(extract_mold,tune_results)
 S3method(extract_preprocessor,tune_results)
 S3method(extract_recipe,tune_results)
