--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,6 +56,7 @@ Suggests:
     xgboost,
     xml2
 Remotes:
+    tidymodels/rsample#483,
     tidymodels/tailor, 
     tidymodels/workflows#225,
     tidymodels/hardhat
