resample calibration post-processors with an internal split (#894)
* resample calibration post-processors with an internal split
* route `rset_info` through to `tune_grid_loop_iter()`
* extract from workflow only once fully trained
* apply postprocessor in `predict_model()`
* test identical to workflows output
* note ignoring `workflow`'s `method` argument

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,9 +51,15 @@ Suggests:
     modeldata,
     scales,
     spelling,
+    tailor,
     testthat (>= 3.0.0),
     xgboost,
     xml2
+Remotes:
+    tidymodels/rsample,
+    tidymodels/tailor, 
+    tidymodels/workflows,
+    tidymodels/hardhat
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
 Config/testthat/edition: 3
