--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Imports:
     dials (>= 1.3.0),
     doFuture (>= 1.0.0),
     dplyr (>= 1.1.0),
-    foreach,
+    furrr,
     future (>= 1.33.0),
     generics (>= 0.1.2),
     ggplot2,
