add a related analytical method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -166,6 +166,7 @@ export(control_grid)
 export(control_last_fit)
 export(control_resamples)
 export(coord_obs_pred)
+export(debias_estimate)
 export(empty_ellipses)
 export(encode_set)
 export(estimate_tune_results)
