--- a/NAMESPACE
+++ b/NAMESPACE
@@ -244,6 +244,7 @@ export(tune_bayes)
 export(tune_grid)
 export(val_class_and_single)
 export(val_class_or_null)
+import(rlang)
 import(vctrs)
 import(workflows)
 importFrom(GPfit,GP_fit)
