--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 1.2.1.9000
 Authors@R: c(
     person("Max", "Kuhn", , "max@posit.co", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2402-136X")),
-    person(given = "Posit Software, PBC", role = c("cph", "fnd"))
+    person("Posit Software, PBC", role = c("cph", "fnd"))
   )
 Description: The ability to tune models is important. 'tune' contains
     functions and classes to be used in conjunction with other
@@ -31,7 +31,7 @@ Imports:
     lifecycle (>= 1.0.0),
     parsnip (>= 1.2.0),
     purrr (>= 1.0.0),
-    recipes (>= 1.0.4),
+    recipes (>= 1.1.0.9001),
     rlang (>= 1.1.4),
     rsample (>= 1.2.1.9000),
     tailor,
@@ -58,8 +58,9 @@ Suggests:
     xml2
 Remotes:
     tidymodels/rsample,
-    tidymodels/tailor, 
-    tidymodels/workflows
+    tidymodels/tailor,
+    tidymodels/workflows.
+    tidymodels/recipes
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
 Config/testthat/edition: 3
