--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,9 +27,9 @@ Imports:
     ggplot2,
     glue (>= 1.6.2),
     GPfit,
-    hardhat (>= 1.2.0),
+    hardhat (>= 1.4.0.9002),
     lifecycle (>= 1.0.0),
-    parsnip (>= 1.2.0),
+    parsnip (>= 1.2.1.9003),
     purrr (>= 1.0.0),
     recipes (>= 1.1.0.9001),
     rlang (>= 1.1.4),
@@ -57,10 +57,12 @@ Suggests:
     xgboost,
     xml2
 Remotes:
+    tidymodels/hardhat,
+    tidymodels/parsnip,
+    tidymodels/recipes,
     tidymodels/rsample,
     tidymodels/tailor,
-    tidymodels/workflows,
-    tidymodels/recipes
+    tidymodels/workflows
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
 Config/testthat/edition: 3
