--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 1.2.1.9000
 Authors@R: c(
     person("Max", "Kuhn", , "max@posit.co", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2402-136X")),
-    person(given = "Posit Software, PBC", role = c("cph", "fnd"))
+    person("Posit Software, PBC", role = c("cph", "fnd"))
   )
 Description: The ability to tune models is important. 'tune' contains
     functions and classes to be used in conjunction with other
@@ -27,12 +27,12 @@ Imports:
     ggplot2,
     glue (>= 1.6.2),
     GPfit,
-    hardhat (>= 1.2.0),
+    hardhat (>= 1.4.0.9002),
     lifecycle (>= 1.0.0),
-    parsnip (>= 1.2.0),
+    parsnip (>= 1.2.1.9003),
     purrr (>= 1.0.0),
-    recipes (>= 1.0.4),
-    rlang (>= 1.1.0),
+    recipes (>= 1.1.0.9001),
+    rlang (>= 1.1.4),
     rsample (>= 1.2.1.9000),
     tailor,
     tibble (>= 3.1.0),
@@ -57,8 +57,11 @@ Suggests:
     xgboost,
     xml2
 Remotes:
+    tidymodels/hardhat,
+    tidymodels/parsnip,
+    tidymodels/recipes,
     tidymodels/rsample,
-    tidymodels/tailor, 
+    tidymodels/tailor,
     tidymodels/workflows
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
