--- a/NAMESPACE
+++ b/NAMESPACE
@@ -193,6 +193,7 @@ export(extract_workflow)
 export(filter_parameters)
 export(finalize_model)
 export(finalize_recipe)
+export(finalize_tailor)
 export(finalize_workflow)
 export(finalize_workflow_preprocessor)
 export(first_eval_time)
