add temp loop code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,6 +204,7 @@ export(fit_resamples)
 export(forge_from_workflow)
 export(get_metric_time)
 export(get_tune_colors)
+export(get_tune_schedule)
 export(initialize_catalog)
 export(int_pctl)
 export(is_preprocessor)
@@ -211,6 +212,7 @@ export(is_recipe)
 export(is_workflow)
 export(last_fit)
 export(load_pkgs)
+export(loopy)
 export(maybe_choose_eval_time)
 export(message_wrap)
 export(metrics_info)
