--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,7 +204,6 @@ export(fit_resamples)
 export(forge_from_workflow)
 export(get_metric_time)
 export(get_tune_colors)
-export(get_tune_schedule)
 export(initialize_catalog)
 export(int_pctl)
 export(is_preprocessor)
@@ -235,6 +234,7 @@ export(parameters)
 export(prob_improve)
 export(pull_rset_attributes)
 export(required_pkgs)
+export(schedule_grid)
 export(select_best)
 export(select_by_one_std_err)
 export(select_by_pct_loss)
