schedule grid incl post-processing
based on work in  #974 and  #978

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -233,6 +233,7 @@ export(parameters)
 export(prob_improve)
 export(pull_rset_attributes)
 export(required_pkgs)
+export(schedule_grid)
 export(select_best)
 export(select_by_one_std_err)
 export(select_by_pct_loss)
