--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,7 +64,8 @@ Remotes:
     tidymodels/rsample,
     tidymodels/tailor,
     tidymodels/workflows,
-    tidymodels/dials
+    tidymodels/dials,
+    tidymodels/probably
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
 Config/testthat/edition: 3
