--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,7 +50,7 @@ Suggests:
     kknn,
     knitr,
     modeldata,
-    probably,
+    probably (>= 1.0.3.9001),
     scales,
     spelling,
     splines2,
