--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,9 @@ S3method(last_fit,workflow)
 S3method(load_pkgs,character)
 S3method(load_pkgs,model_spec)
 S3method(load_pkgs,workflow)
+S3method(melodie_grid,default)
+S3method(melodie_grid,model_spec)
+S3method(melodie_grid,workflow)
 S3method(merge,model_spec)
 S3method(merge,recipe)
 S3method(min_grid,C5_rules)
@@ -211,7 +214,10 @@ export(is_recipe)
 export(is_workflow)
 export(last_fit)
 export(load_pkgs)
+export(loopy)
+export(loopy2)
 export(maybe_choose_eval_time)
+export(melodie_grid)
 export(message_wrap)
 export(metrics_info)
 export(min_grid)
