--- a/NAMESPACE
+++ b/NAMESPACE
@@ -214,8 +214,6 @@ export(is_recipe)
 export(is_workflow)
 export(last_fit)
 export(load_pkgs)
-export(loopy)
-export(loopy2)
 export(maybe_choose_eval_time)
 export(melodie_grid)
 export(message_wrap)
@@ -295,6 +293,7 @@ importFrom(dplyr,vars)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(foreach,getDoParName)
+importFrom(future.apply,future_lapply)
 importFrom(generics,augment)
 importFrom(generics,min_grid)
 importFrom(generics,required_pkgs)
