add an outcome_names method for workflow_variables preprocessors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ S3method(outcome_names,recipe)
 S3method(outcome_names,terms)
 S3method(outcome_names,tune_results)
 S3method(outcome_names,workflow)
+S3method(outcome_names,workflow_variables)
 S3method(parameters,model_spec)
 S3method(parameters,recipe)
 S3method(parameters,workflow)
