temporarily add our working branch to use all tests

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -6,9 +6,9 @@
 # usethis::use_github_action("check-standard") will install it.
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, 'melodie-switch']
   pull_request:
-    branches: [main, master]
+    branches: [main, master, 'melodie-switch']
 
 name: R-CMD-check.yaml
 
