Export exposed functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ S3method(print,control_bayes)
 S3method(print,control_grid)
 S3method(print,control_last_fit)
 S3method(print,prob_improve)
+S3method(print,rset)
 S3method(print,tune_results)
 S3method(select_best,default)
 S3method(select_best,tune_results)
@@ -154,8 +155,10 @@ export(.get_tune_workflow)
 export(.load_namespace)
 export(.stash_last_result)
 export(.use_case_weights_with_yardstick)
+export(add_fold_weights)
 export(augment)
 export(autoplot)
+export(calculate_fold_weights)
 export(check_eval_time_arg)
 export(check_initial)
 export(check_metric_in_tune_results)
@@ -205,6 +208,7 @@ export(fit_best)
 export(fit_max_value)
 export(fit_resamples)
 export(forge_from_workflow)
+export(get_fold_weights)
 export(get_metric_time)
 export(get_tune_colors)
 export(initialize_catalog)
