printing manual_rset too?

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ S3method(pretty,tune_results)
 S3method(print,control_bayes)
 S3method(print,control_grid)
 S3method(print,control_last_fit)
+S3method(print,manual_rset)
 S3method(print,prob_improve)
 S3method(print,rset)
 S3method(print,tune_results)
