--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,7 @@ Imports:
     purrr (>= 1.0.0),
     recipes (>= 1.1.0.9001),
     rlang (>= 1.1.4),
-    rsample (>= 1.2.1.9000),
+    rsample (>= 1.3.0.9002),
     tailor,
     tibble (>= 3.1.0),
     tidyr (>= 1.2.0),
@@ -61,6 +61,7 @@ Suggests:
     xgboost,
     xml2
 Remotes:
+    tidymodels/rsample#586,
     tidymodels/tailor,
     tidymodels/workflows
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
