--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,7 +61,7 @@ Suggests:
     xgboost,
     xml2
 Remotes:
-    tidymodels/rsample#588,
+    tidymodels/rsample,
     tidymodels/tailor,
     tidymodels/workflows
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
