--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ S3method(min_grid,multinom_reg)
 S3method(min_grid,nearest_neighbor)
 S3method(min_grid,pls)
 S3method(min_grid,poisson_reg)
+S3method(min_grid,proportional_hazards)
 S3method(min_grid,rule_fit)
 S3method(obj_sum,resample_results)
 S3method(obj_sum,tune_race)
