--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,7 @@ Imports:
     tidyselect (>= 1.1.2),
     vctrs (>= 0.6.1),
     withr,
-    workflows (>= 1.2.0.9000),
+    workflows (>= 1.2.0.9001),
     yardstick (>= 1.3.0)
 Suggests: 
     C50,
@@ -64,7 +64,7 @@ Suggests:
 Remotes:
     tidymodels/rsample,
     tidymodels/tailor,
-    tidymodels/workflows
+    tidymodels/workflows#298
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
 Config/testthat/edition: 3
