--- a/NAMESPACE
+++ b/NAMESPACE
@@ -164,6 +164,7 @@ export(check_rset)
 export(check_time)
 export(check_workflow)
 export(choose_eval_time)
+export(choose_framework)
 export(choose_metric)
 export(collect_extracts)
 export(collect_metrics)
@@ -180,6 +181,7 @@ export(coord_obs_pred)
 export(empty_ellipses)
 export(encode_set)
 export(estimate_tune_results)
+export(eval_mirai)
 export(exp_improve)
 export(expo_decay)
 export(extract_fit_engine)
@@ -203,8 +205,13 @@ export(fit_best)
 export(fit_max_value)
 export(fit_resamples)
 export(forge_from_workflow)
+export(future_installed)
+export(get_future_workers)
 export(get_metric_time)
+export(get_mirai_workers)
+export(get_parallel_seeds)
 export(get_tune_colors)
+export(has_non_par_pkgs)
 export(initialize_catalog)
 export(int_pctl)
 export(is_preprocessor)
@@ -227,9 +234,11 @@ export(min_grid.nearest_neighbor)
 export(min_grid.pls)
 export(min_grid.poisson_reg)
 export(min_grid.rule_fit)
+export(mirai_installed)
 export(new_backend_options)
 export(new_iteration_results)
 export(outcome_names)
+export(par_fns)
 export(parameters)
 export(prob_improve)
 export(pull_rset_attributes)
