--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,7 @@ Imports:
     recipes (>= 1.1.0.9001),
     rlang (>= 1.1.4),
     rsample (>= 1.3.0.9003),
-    tailor,
+    tailor (>= 0.1.0),
     tibble (>= 3.1.0),
     tidyr (>= 1.2.0),
     tidyselect (>= 1.1.2),
