--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,10 +136,13 @@ S3method(vec_restore,resample_results)
 S3method(vec_restore,tune_results)
 export(.catch_and_log)
 export(.config_key_from_metrics)
+export(.create_weight_mapping)
+export(.effective_sample_size)
 export(.estimate_metrics)
 export(.filter_perf_metrics)
 export(.get_extra_col_names)
 export(.get_fingerprint)
+export(.get_fold_weights)
 export(.get_tune_eval_time_target)
 export(.get_tune_eval_times)
 export(.get_tune_metric_names)
@@ -151,6 +154,8 @@ export(.get_tune_workflow)
 export(.load_namespace)
 export(.stash_last_result)
 export(.use_case_weights_with_yardstick)
+export(.validate_fold_weights)
+export(.weighted_sd)
 export(add_fold_weights)
 export(augment)
 export(autoplot)
@@ -206,8 +211,8 @@ export(fit_max_value)
 export(fit_resamples)
 export(forge_from_workflow)
 export(future_installed)
-export(get_future_workers)
 export(get_fold_weights)
+export(get_future_workers)
 export(get_metric_time)
 export(get_mirai_workers)
 export(get_parallel_seeds)
