fold_weight -> resample_weight

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,9 +82,7 @@ S3method(pretty,tune_results)
 S3method(print,control_bayes)
 S3method(print,control_grid)
 S3method(print,control_last_fit)
-S3method(print,manual_rset)
 S3method(print,prob_improve)
-S3method(print,rset)
 S3method(print,tune_results)
 S3method(select_best,default)
 S3method(select_best,tune_results)
@@ -142,7 +140,7 @@ export(.estimate_metrics)
 export(.filter_perf_metrics)
 export(.get_extra_col_names)
 export(.get_fingerprint)
-export(.get_fold_weights)
+export(.get_resample_weights)
 export(.get_tune_eval_time_target)
 export(.get_tune_eval_times)
 export(.get_tune_metric_names)
@@ -154,12 +152,12 @@ export(.get_tune_workflow)
 export(.load_namespace)
 export(.stash_last_result)
 export(.use_case_weights_with_yardstick)
-export(.validate_fold_weights)
+export(.validate_resample_weights)
 export(.weighted_sd)
-export(add_fold_weights)
+export(add_resample_weights)
 export(augment)
 export(autoplot)
-export(calculate_fold_weights)
+export(calculate_resample_weights)
 export(check_eval_time_arg)
 export(check_initial)
 export(check_metric_in_tune_results)
@@ -211,11 +209,11 @@ export(fit_max_value)
 export(fit_resamples)
 export(forge_from_workflow)
 export(future_installed)
-export(get_fold_weights)
 export(get_future_workers)
 export(get_metric_time)
 export(get_mirai_workers)
 export(get_parallel_seeds)
+export(get_resample_weights)
 export(get_tune_colors)
 export(has_non_par_pkgs)
 export(initialize_catalog)
