--- a/NAMESPACE
+++ b/NAMESPACE
@@ -194,6 +194,7 @@ export(extract_mold)
 export(extract_parameter_set_dials)
 export(extract_preprocessor)
 export(extract_recipe)
+export(extract_resample_weights)
 export(extract_spec_parsnip)
 export(extract_workflow)
 export(filter_parameters)
@@ -213,7 +214,6 @@ export(get_future_workers)
 export(get_metric_time)
 export(get_mirai_workers)
 export(get_parallel_seeds)
-export(get_resample_weights)
 export(get_tune_colors)
 export(has_non_par_pkgs)
 export(initialize_catalog)
