Add Fold Weights for Variable Resample Weighting (#1007)
* Add fold weights functionality

* Remove manually added .Rd files - these are generated by roxygen2

* Add print options for fold weights

* Export exposed functions

* printing manual_rset too?

* Run air

* Run air on tests

* Fix piping error

* Improve docs

* Improve docs and actually merge the file...

* use statistics based on functions from the stats package

* move away from glmnet

* spelling update

* redoc

* news entry

* global data false positives

* change to base R pipe

* fix test case

* remove print methods - made an issue in rsample for that

* fold_weight -> resample_weight

* name user-facing function with "extract" instead of "get"

* Make weights NULL when equal

---------

Co-authored-by: Tyler Burch <tburch@redsox.com>
Co-authored-by: topepo <mxkuhn@gmail.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,10 +134,13 @@ S3method(vec_restore,resample_results)
 S3method(vec_restore,tune_results)
 export(.catch_and_log)
 export(.config_key_from_metrics)
+export(.create_weight_mapping)
+export(.effective_sample_size)
 export(.estimate_metrics)
 export(.filter_perf_metrics)
 export(.get_extra_col_names)
 export(.get_fingerprint)
+export(.get_resample_weights)
 export(.get_tune_eval_time_target)
 export(.get_tune_eval_times)
 export(.get_tune_metric_names)
@@ -149,8 +152,12 @@ export(.get_tune_workflow)
 export(.load_namespace)
 export(.stash_last_result)
 export(.use_case_weights_with_yardstick)
+export(.validate_resample_weights)
+export(.weighted_sd)
+export(add_resample_weights)
 export(augment)
 export(autoplot)
+export(calculate_resample_weights)
 export(check_eval_time_arg)
 export(check_initial)
 export(check_metric_in_tune_results)
@@ -187,6 +194,7 @@ export(extract_mold)
 export(extract_parameter_set_dials)
 export(extract_preprocessor)
 export(extract_recipe)
+export(extract_resample_weights)
 export(extract_spec_parsnip)
 export(extract_workflow)
 export(filter_parameters)
