Switch from GPfit to GauPro for Gaussian Processes (#1104)
* initial code for GauPro

* update GP check

* more helpers

* logging and seeds

* update messages

* accommodations for qualitative tuning parameters

* note about left-over warnings

* add some notes

* small updates

* switch gp packages

* global variable from mutate

* notes and remove old functions

* add GauPro

* more updates

* remove old functions

* air format

* simplify note

* write more details; rename some columns names for GP function

* clean up some notes

* update news

* recreate test objects with new GP code

* update tests

* redoc

* update words

* base pipe

* avoid loading workflowsets in test objects

* missing o=symbol names

* merge on updated names

* capture output

* update bayes objects with wide grids

* remove the use of previous GP fit code

* remove some minor warnings when the occur

* capture output

* test files names based on R file names

* fix news entry

* skip for seemingly unrelated package based on GHA results

* Apply suggestions from code review

Co-authored-by: Emil Hvitfeldt <emil.hvitfeldt@posit.co>

* use existing random number stream

* no longer used

* update snapshots

* typo

---------

Co-authored-by: Emil Hvitfeldt <emil.hvitfeldt@posit.co>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ Imports:
     generics (>= 0.1.2),
     ggplot2,
     glue (>= 1.6.2),
-    GPfit,
+    GauPro (>= 0.2.15),
     hardhat (>= 1.4.2),
     parallel,
     parsnip (>= 1.2.1.9003),
@@ -66,4 +66,4 @@ Encoding: UTF-8
 Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
