--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,7 +2,7 @@ url: https://tune.tidymodels.org/
 
 navbar:
   components:
-    home: ~
+    home:
     tutorials:
       text: Learn more
       menu:
@@ -21,8 +21,9 @@ template:
     primary: "#CA225E"
 
   includes:
-      in_header: |
-        <script defer data-domain="tune.tidymodels.org,all.tidymodels.org" src="https://plausible.io/js/plausible.js"></script>
+    in_header: |
+      <script src="https://cdn.jsdelivr.net/gh/posit-dev/supported-by-posit/js/badge.min.js" data-max-height="43" data-hide-below="1200" data-light-bg="#666f76" data-light-fg="#f9f9f9"></script>
+      <script defer data-domain="tune.tidymodels.org,all.tidymodels.org" src="https://plausible.io/js/plausible.js"></script>
 
 development:
   mode: auto
@@ -32,44 +33,44 @@ figures:
   fig.height: 5.75
 
 reference:
-  - title: Fit many models
-    contents:
-    - tune_grid
-    - tune_bayes
-    - expo_decay
-    - conf_bound
-    - starts_with("melodie")
-    - fit_resamples
-    - control_grid
-    - control_bayes
-    - parallelism
-  - title: Fit one model
-    contents:
-    - fit_best
-    - last_fit
-    - starts_with("finalize")
-    - control_last_fit
-  - title: Inspect results
-    contents:
-    - starts_with("collect")
-    - show_notes
-    - show_best
-    - starts_with("select_")
-    - filter_parameters
-    - autoplot.tune_results
-    - coord_obs_pred
-    - conf_mat_resampled
-  - title: Miscellaneous
-    contents:
-    - starts_with("extract_")
-    - starts_with("int_pctl")
-    - starts_with("compute")
-    - augment.tune_results
-    - example_ames_knn
-    - contains("resample_weight")
-  - title: Developer functions
-    contents:
-    - merge.recipe
-    - message_wrap
-    - .use_case_weights_with_yardstick
-    - .stash_last_result
+- title: Fit many models
+  contents:
+  - tune_grid
+  - tune_bayes
+  - expo_decay
+  - conf_bound
+  - starts_with("melodie")
+  - fit_resamples
+  - control_grid
+  - control_bayes
+  - parallelism
+- title: Fit one model
+  contents:
+  - fit_best
+  - last_fit
+  - starts_with("finalize")
+  - control_last_fit
+- title: Inspect results
+  contents:
+  - starts_with("collect")
+  - show_notes
+  - show_best
+  - starts_with("select_")
+  - filter_parameters
+  - autoplot.tune_results
+  - coord_obs_pred
+  - conf_mat_resampled
+- title: Miscellaneous
+  contents:
+  - starts_with("extract_")
+  - starts_with("int_pctl")
+  - starts_with("compute")
+  - augment.tune_results
+  - example_ames_knn
+  - contains("resample_weight")
+- title: Developer functions
+  contents:
+  - merge.recipe
+  - message_wrap
+  - .use_case_weights_with_yardstick
+  - .stash_last_result
