Exports and renames check_grid -> .check_grid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,7 @@ S3method(vec_restore,iteration_results)
 S3method(vec_restore,resample_results)
 S3method(vec_restore,tune_results)
 export(.catch_and_log)
+export(.check_grid)
 export(.config_key_from_metrics)
 export(.create_weight_mapping)
 export(.effective_sample_size)
