--- a/NAMESPACE
+++ b/NAMESPACE
@@ -152,6 +152,7 @@ export(.get_tune_parameters)
 export(.get_tune_workflow)
 export(.load_namespace)
 export(.stash_last_result)
+export(.update_parallel_over)
 export(.use_case_weights_with_yardstick)
 export(.validate_resample_weights)
 export(.weighted_sd)
