Exports and renames determine_pred_types -> .determine_pred_types

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,7 @@ export(.catch_and_log)
 export(.check_grid)
 export(.config_key_from_metrics)
 export(.create_weight_mapping)
+export(.determine_pred_types)
 export(.effective_sample_size)
 export(.estimate_metrics)
 export(.filter_perf_metrics)
