Exports and renames loop_over_all_stages -> .loop_over_all_stages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ export(.determine_pred_types)
 export(.effective_sample_size)
 export(.estimate_metrics)
 export(.filter_perf_metrics)
+export(.get_config_key)
 export(.get_extra_col_names)
 export(.get_fingerprint)
 export(.get_resample_weights)
@@ -152,6 +153,7 @@ export(.get_tune_parameter_names)
 export(.get_tune_parameters)
 export(.get_tune_workflow)
 export(.load_namespace)
+export(.loop_over_all_stages)
 export(.stash_last_result)
 export(.update_parallel_over)
 export(.use_case_weights_with_yardstick)
