--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -53,7 +53,9 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck
+          extra-packages:
+            any::rcmdcheck,
+            xgboost=?ignore-before-r=4.3.0
           needs: check
 
       - name: Try to install a few packages for testing
