Renames and exports selected functions (#1121)
* Exports and renames check_grid -> .check_grid

* Exports and renames update_parallel_over -> .update_parallel_over

* Exports and renames get_config_key -> .get_config_key

* Exports and renames determine_pred_types -> .determine_pred_types

* Exports and renames loop_over_all_stages -> .loop_over_all_stages

* Passes tests

* Version bump

* Adds NEWS item

* Re-adds snapshot for rstanarm installation test

* version bump

---------

Co-authored-by: ‘topepo’ <mxkuhn@gmail.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,11 +133,14 @@ S3method(vec_restore,iteration_results)
 S3method(vec_restore,resample_results)
 S3method(vec_restore,tune_results)
 export(.catch_and_log)
+export(.check_grid)
 export(.config_key_from_metrics)
 export(.create_weight_mapping)
+export(.determine_pred_types)
 export(.effective_sample_size)
 export(.estimate_metrics)
 export(.filter_perf_metrics)
+export(.get_config_key)
 export(.get_extra_col_names)
 export(.get_fingerprint)
 export(.get_resample_weights)
@@ -150,7 +153,9 @@ export(.get_tune_parameter_names)
 export(.get_tune_parameters)
 export(.get_tune_workflow)
 export(.load_namespace)
+export(.loop_over_all_stages)
 export(.stash_last_result)
+export(.update_parallel_over)
 export(.use_case_weights_with_yardstick)
 export(.validate_resample_weights)
 export(.weighted_sd)
