--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,7 +61,7 @@ Suggests:
     xgboost,
     xml2
 Remotes:
-    tidymodels/parsnip#1326
+    tidymodels/parsnip
 Config/Needs/website: pkgdown, tidymodels, kknn, tidyverse/tidytemplate
 Config/testthat/edition: 3
 Encoding: UTF-8
