--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,7 +61,8 @@ Suggests:
     xgboost,
     xml2
 Remotes:
-    tidymodels/parsnip
+    tidymodels/parsnip,
+    tidymodels/yardstick
 Config/Needs/website: pkgdown, tidymodels, kknn, tidyverse/tidytemplate
 Config/testthat/edition: 3
 Encoding: UTF-8
