--- a/NAMESPACE
+++ b/NAMESPACE
@@ -141,6 +141,7 @@ export(.effective_sample_size)
 export(.estimate_metrics)
 export(.filter_perf_metrics)
 export(.get_config_key)
+export(.get_data_subsets)
 export(.get_extra_col_names)
 export(.get_fingerprint)
 export(.get_resample_weights)
