Quantile regression integration (#1127)
* changes for #1125

* unit tests

* update docs on default metrics

* yardstick remote

* Update tests/testthat/test-quantile-regression.R

Co-authored-by: Emil Hvitfeldt <emil.hvitfeldt@posit.co>

* new update

* bump yardstick to dev version

---------

Co-authored-by: Emil Hvitfeldt <emil.hvitfeldt@posit.co>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -379,3 +379,4 @@ importFrom(yardstick,brier_survival)
 importFrom(yardstick,rmse)
 importFrom(yardstick,roc_auc)
 importFrom(yardstick,rsq)
+importFrom(yardstick,weighted_interval_score)
