--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,7 @@ Imports:
     GauPro (>= 0.2.15),
     hardhat (>= 1.4.2),
     parallel,
-    parsnip (>= 1.2.1.9003),
+    parsnip (>= 1.4.1.9002),
     purrr (>= 1.0.0),
     recipes (>= 1.1.0.9001),
     rlang (>= 1.1.4),
@@ -39,7 +39,7 @@ Imports:
     vctrs (>= 0.6.1),
     withr,
     workflows (>= 1.3.0),
-    yardstick (>= 1.3.0)
+    yardstick (>= 1.3.2.9000)
 Suggests: 
     C50,
     censored (>= 0.3.0),
@@ -60,6 +60,9 @@ Suggests:
     testthat (>= 3.0.0),
     xgboost,
     xml2
+Remotes:
+    tidymodels/parsnip,
+    tidymodels/yardstick
 Config/Needs/website: pkgdown, tidymodels, kknn, tidyverse/tidytemplate
 Config/testthat/edition: 3
 Encoding: UTF-8
